--- a/style.css
+++ b/style.css
@@ -1852,7 +1852,7 @@ body {
   opacity: 0.2;
 }
 
-.alkali-metal {
+.Alcalino {
   color: #ecbe59;
 }
 
@@ -2097,9 +2097,9 @@ body {
   opacity: 1 !important;
 }
 
-#Alcalinos:checked ~ .periodic-table .elemento:not(.alkali-metal),
+#Alcalinos:checked ~ .periodic-table .elemento:not(.Alcalino),
 #Alcalino-Térreos:checked ~ .periodic-table .elemento:not(.alkaline-earth-metal),
-#Lantánidos:checked ~ .periodic-table .elemento:not(.Lantanido),
+#Lantanidos:checked ~ .periodic-table .elemento:not(.Lantanido),
 #Actinidos:checked ~ .periodic-table .elemento:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .elemento:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.post-transition-metal),
@@ -2109,7 +2109,7 @@ body {
 #Halogenos:checked ~ .periodic-table .elemento:not(.Halogeno),
 #Alcalinos:checked ~ .periodic-table .placeholder,
 #Alcalino-Térreos:checked ~ .periodic-table .placeholder,
-#Lantánidos:checked ~ .periodic-table .placeholder:not(.Lantanido),
+#Lantanidos:checked ~ .periodic-table .placeholder:not(.Lantanido),
 #Actinidos:checked ~ .periodic-table .placeholder:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .placeholder,
 #Otros-Metales:checked ~ .periodic-table .placeholder,
@@ -2121,9 +2121,9 @@ body {
   pointer-events: none;
 }
 
-#Alcalinos:checked ~ .periodic-table .key label:not(.alkali-metal),
+#Alcalinos:checked ~ .periodic-table .key label:not(.Alcalino),
 #Alcalino-Térreos:checked ~ .periodic-table .key label:not(.alkaline-earth-metal),
-#Lantánidos:checked ~ .periodic-table .key label:not(.Lantanido),
+#Lantanidos:checked ~ .periodic-table .key label:not(.Lantanido),
 #Actinidos:checked ~ .periodic-table .key label:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .key label:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .key label:not(.post-transition-metal),
@@ -2134,7 +2134,7 @@ body {
   opacity: 0.65;
 }
 
-.cambiar-categoria:not(#Lantánidos):not(#Actinidos):checked ~ .periodic-table .gap {
+.cambiar-categoria:not(#Lantanidos):not(#Actinidos):checked ~ .periodic-table .gap {
   opacity: 0.5;
 }
 
