--- a/src/style.sass
+++ b/src/style.sass
@@ -6,7 +6,7 @@ $alkalineEarthMetalColor: #dee955
 $LantanidoColor: #ec77a3
 $ActinidoColor: #c686cc
 $transitionMetalColor: #fd8572
-$postTransitionMetalColor: #4cddf3
+$OtroMetalColor: #4cddf3
 $MetaloideColor: #3aefb6
 $otroNoMetal: #52ee61
 $GasNobleColor: #759fff
@@ -274,7 +274,7 @@ body
 // --------------------------------------
 // COLORS
 .Alcalino
-  color: $alkaliMetalColor
+  color: $AlcalinoColor
 
 .alkaline-earth-metal
   color: $alkalineEarthMetalColor
@@ -288,8 +288,8 @@ body
 .transition-metal
   color: $transitionMetalColor
 
-.post-transition-metal
-  color: $postTransitionMetalColor
+.Otro-Metal
+  color: $OtroMetalColor
 
 .Metaloide
   color: $MetaloideColor
@@ -405,17 +405,17 @@ body
 // --------------------------------------
 // CATEGORY TOGGLES
 #Alcalinos:checked ~ .periodic-table .elemento:not(.Alcalino),
-#Alcalino-Térreos:checked ~ .periodic-table .elemento:not(.alkaline-earth-metal),
+#Alcalino-Terreos:checked ~ .periodic-table .elemento:not(.alkaline-earth-metal),
 #Lantánidos:checked ~ .periodic-table .elemento:not(.Lantanido),
 #Actinidos:checked ~ .periodic-table .elemento:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .elemento:not(.transition-metal),
-#Otros-Metales:checked ~ .periodic-table .elemento:not(.post-transition-metal),
+#Otros-Metales:checked ~ .periodic-table .elemento:not(.Otro-Metal),
 #Metaloides:checked ~ .periodic-table .elemento:not(.Metaloide),
 #Otros-no-Metales:checked ~ .periodic-table .elemento:not(.Otro-no-Metal),
 #Gases-nobles:checked ~ .periodic-table .elemento:not(.GasNoble),
 #Halogenos:checked ~ .periodic-table .elemento:not(.Halogeno),
 #Alcalinos:checked ~ .periodic-table .placeholder,
-#Alcalino-Térreos:checked ~ .periodic-table .placeholder,
+#Alcalino-Terreos:checked ~ .periodic-table .placeholder,
 #Lantánidos:checked ~ .periodic-table .placeholder:not(.Lantanido),
 #Actinidos:checked ~ .periodic-table .placeholder:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .placeholder,
@@ -429,11 +429,11 @@ body
 }
 
 #Alcalinos:checked ~ .periodic-table .key label:not(.Alcalino),
-#Alcalino-Térreos:checked ~ .periodic-table .key label:not(.alkaline-earth-metal),
+#Alcalino-Terreos:checked ~ .periodic-table .key label:not(.alkaline-earth-metal),
 #Lantánidos:checked ~ .periodic-table .key label:not(.Lantanido),
 #Actinidos:checked ~ .periodic-table .key label:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .key label:not(.transition-metal),
-#Otros-Metales:checked ~ .periodic-table .key label:not(.post-transition-metal),
+#Otros-Metales:checked ~ .periodic-table .key label:not(.Otro-Metal),
 #Metaloides:checked ~ .periodic-table .key label:not(.Metaloide),
 #Otros-no-Metales:checked ~ .periodic-table .key label:not(.Otro-no-Metal),
 #Gases-nobles:checked ~ .periodic-table .key label:not(.GasNoble),
