--- a/style.css
+++ b/style.css
@@ -1872,7 +1872,7 @@ body {
   color: #fd8572;
 }
 
-.post-transition-metal {
+.Otro-Metal {
   color: #4cddf3;
 }
 
@@ -2098,17 +2098,17 @@ body {
 }
 
 #Alcalinos:checked ~ .periodic-table .elemento:not(.Alcalino),
-#Alcalino-Térreos:checked ~ .periodic-table .elemento:not(.alkaline-earth-metal),
+#Alcalino-Terreos:checked ~ .periodic-table .elemento:not(.alkaline-earth-metal),
 #Lantanidos:checked ~ .periodic-table .elemento:not(.Lantanido),
 #Actinidos:checked ~ .periodic-table .elemento:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .elemento:not(.transition-metal),
-#Otros-Metales:checked ~ .periodic-table .elemento:not(.post-transition-metal),
+#Otros-Metales:checked ~ .periodic-table .elemento:not(.Otro-Metal),
 #Metaloides:checked ~ .periodic-table .elemento:not(.Metaloide),
 #Otros-no-Metales:checked ~ .periodic-table .elemento:not(.Otro-no-Metal),
 #Gases-nobles:checked ~ .periodic-table .elemento:not(.GasNoble),
 #Halogenos:checked ~ .periodic-table .elemento:not(.Halogeno),
 #Alcalinos:checked ~ .periodic-table .placeholder,
-#Alcalino-Térreos:checked ~ .periodic-table .placeholder,
+#Alcalino-Terreos:checked ~ .periodic-table .placeholder,
 #Lantanidos:checked ~ .periodic-table .placeholder:not(.Lantanido),
 #Actinidos:checked ~ .periodic-table .placeholder:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .placeholder,
@@ -2122,11 +2122,11 @@ body {
 }
 
 #Alcalinos:checked ~ .periodic-table .key label:not(.Alcalino),
-#Alcalino-Térreos:checked ~ .periodic-table .key label:not(.alkaline-earth-metal),
+#Alcalino-Terreos:checked ~ .periodic-table .key label:not(.alkaline-earth-metal),
 #Lantanidos:checked ~ .periodic-table .key label:not(.Lantanido),
 #Actinidos:checked ~ .periodic-table .key label:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .key label:not(.transition-metal),
-#Otros-Metales:checked ~ .periodic-table .key label:not(.post-transition-metal),
+#Otros-Metales:checked ~ .periodic-table .key label:not(.Otro-Metal),
 #Metaloides:checked ~ .periodic-table .key label:not(.Metaloide),
 #Otros-no-Metales:checked ~ .periodic-table .key label:not(.Otro-no-Metal),
 #Gases-nobles:checked ~ .periodic-table .key label:not(.GasNoble),
