--- a/src/style.sass
+++ b/src/style.sass
@@ -297,7 +297,7 @@ body
 .Otro-no-Metal
   color: $otroNoMetal
 
-.GasNoble
+.Gas-Noble
   color: $GasNobleColor
 
 .Halogeno
@@ -412,7 +412,7 @@ body
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.Otro-Metal),
 #Metaloides:checked ~ .periodic-table .elemento:not(.Metaloide),
 #Otros-no-Metales:checked ~ .periodic-table .elemento:not(.Otro-no-Metal),
-#Gases-nobles:checked ~ .periodic-table .elemento:not(.GasNoble),
+#Gases-nobles:checked ~ .periodic-table .elemento:not(.Gas-Noble),
 #Halogenos:checked ~ .periodic-table .elemento:not(.Halogeno),
 #Alcalinos:checked ~ .periodic-table .placeholder,
 #Alcalino-Terreos:checked ~ .periodic-table .placeholder,
@@ -436,7 +436,7 @@ body
 #Otros-Metales:checked ~ .periodic-table .key label:not(.Otro-Metal),
 #Metaloides:checked ~ .periodic-table .key label:not(.Metaloide),
 #Otros-no-Metales:checked ~ .periodic-table .key label:not(.Otro-no-Metal),
-#Gases-nobles:checked ~ .periodic-table .key label:not(.GasNoble),
+#Gases-nobles:checked ~ .periodic-table .key label:not(.Gas-Noble),
 #Halogenos:checked ~ .periodic-table .key label:not(.Halogeno) {
   opacity: 0.65;
 }
