--- a/style.css
+++ b/style.css
@@ -1884,7 +1884,7 @@ body {
   color: #52ee61;
 }
 
-.GasNoble {
+.Gas-Noble {
   color: #759fff;
 }
 
@@ -2105,7 +2105,7 @@ body {
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.Otro-Metal),
 #Metaloides:checked ~ .periodic-table .elemento:not(.Metaloide),
 #Otros-no-Metales:checked ~ .periodic-table .elemento:not(.Otro-no-Metal),
-#Gases-nobles:checked ~ .periodic-table .elemento:not(.GasNoble),
+#Gases-nobles:checked ~ .periodic-table .elemento:not(.Gas-Noble),
 #Halogenos:checked ~ .periodic-table .elemento:not(.Halogeno),
 #Alcalinos:checked ~ .periodic-table .placeholder,
 #Alcalino-Terreos:checked ~ .periodic-table .placeholder,
@@ -2129,7 +2129,7 @@ body {
 #Otros-Metales:checked ~ .periodic-table .key label:not(.Otro-Metal),
 #Metaloides:checked ~ .periodic-table .key label:not(.Metaloide),
 #Otros-no-Metales:checked ~ .periodic-table .key label:not(.Otro-no-Metal),
-#Gases-nobles:checked ~ .periodic-table .key label:not(.GasNoble),
+#Gases-nobles:checked ~ .periodic-table .key label:not(.Gas-Noble),
 #Halogenos:checked ~ .periodic-table .key label:not(.Halogeno) {
   opacity: 0.65;
 }
