--- a/src/index.pug
+++ b/src/index.pug
@@ -34,7 +34,7 @@ mixin placeholder(number, material, column, row)
     input.category-cancel(type='radio', id='cancel' name='categories')
   .periodic-table
     +element(1, 'H', 'Hydrogen', 1.008, [1], 'Otro-no-Metal', 1, 1)
-    +element(2, 'He', 'Helium', 4.0026, [2], 'Gas-Noble', 18, 1)
+    +element(2, 'He', 'Helium', 4.0026, [2], 'gasNoble', 18, 1)
     +element(3, 'Li', 'Lithium', 6.94, [3], 'Alcalino', 1, 2)
     +element(4, 'Be', 'Beryllium', 9.0122, [2,2], 'alkaline-earth-metal', 2, 2)
     +element(5, 'B', 'Boron', 10.81, [2,3], 'Metaloide', 13, 2)
@@ -42,15 +42,15 @@ mixin placeholder(number, material, column, row)
     +element(7, 'N', 'Nitrogen', 14.007, [2,5], 'Otro-no-Metal', 15, 2)
     +element(8, 'O', 'Oxygen', 15.999, [2,6], 'Otro-no-Metal', 16, 2)
     +element(9, 'F', 'Flourine', 18.998, [2,7], 'Otro-no-Metal', 17, 2)
-    +element(10, 'Ne', 'Neon', 20.180, [2,8], 'Gas-Noble', 18, 2)
+    +element(10, 'Ne', 'Neon', 20.180, [2,8], 'gasNoble', 18, 2)
     +element(11, 'Na', 'Sodium', 22.990, [2,8,1], 'Alcalino', 1, 3)
     +element(12, 'Mg', 'Magnesium', 24.305, [2,8,2], 'alkaline-earth-metal', 2, 3)
-    +element(13, 'Al', 'Aluminium', 26.982, [2,8,3], 'Otro-Metal', 13, 3)
+    +element(13, 'Al', 'Aluminium', 26.982, [2,8,3], 'otroMetal', 13, 3)
     +element(14, 'Si', 'Silicon', 28.085, [2,8,4], 'Metaloide', 14, 3)
     +element(15, 'P', 'Phosphorus', 30.974, [2,8,5], 'Otro-no-Metal', 15, 3)
     +element(16, 'S', 'Sulfur', 32.06, [2,8,6], 'Otro-no-Metal', 16, 3)
     +element(17, 'Cl', 'Chlorine', 35.45, [2,8,7], 'Otro-no-Metal', 17, 3)
-    +element(18, 'Ar', 'Argon', 39.948, [2,8,8], 'Gas-Noble', 18, 3)
+    +element(18, 'Ar', 'Argon', 39.948, [2,8,8], 'gasNoble', 18, 3)
     +element(19, 'K', 'Potassium', 39.098, [2,8,8,1], 'Alcalino', 1, 4)
     +element(20, 'Ca', 'Calcium', 40.078, [2,8,8,2], 'alkaline-earth-metal', 2, 4)
     +element(21, 'Sc', 'Scandium', 44.956, [2,8,9,2], 'transition-metal', 3, 4)
@@ -63,12 +63,12 @@ mixin placeholder(number, material, column, row)
     +element(28, 'Ni', 'Nickel', 58.693, [2,8,16,2], 'transition-metal', 10, 4)
     +element(29, 'Cu', 'Copper', 63.546, [2,8,18,1], 'transition-metal', 11, 4)
     +element(30, 'Zn', 'Zinc', 65.38, [2,8,18,2], 'transition-metal', 12, 4)
-    +element(31, 'Ga', 'Gallium', 69.723, [2,8,18,3], 'Otro-Metal', 13, 4)
+    +element(31, 'Ga', 'Gallium', 69.723, [2,8,18,3], 'otroMetal', 13, 4)
     +element(32, 'Ge', 'Germanium', 72.630, [2,8,18,4], 'Metaloide', 14, 4)
     +element(33, 'As', 'Arsenic', 74.922, [2,8,18,5], 'Metaloide', 15, 4)
     +element(34, 'Se', 'Selenium', 78.971, [2,8,18,6], 'Otro-no-Metal', 16, 4)
     +element(35, 'Br', 'Bromine', 79.904, [2,8,18,7], 'Otro-no-Metal', 17, 4)
-    +element(36, 'Kr', 'Krypton', 83.798, [2,8,18,8], 'Gas-Noble', 18, 4)
+    +element(36, 'Kr', 'Krypton', 83.798, [2,8,18,8], 'gasNoble', 18, 4)
     +element(37, 'Rb', 'Rubidium', 85.468, [2,8,18,8,1], 'Alcalino', 1, 5)
     +element(38, 'Sr', 'Strontium', 87.62, [2,8,18,8,2], 'alkaline-earth-metal', 2, 5)
     +element(39, 'Y', 'Yttrium', 88.906, [2,8,18,9,2], 'transition-metal', 3, 5)
@@ -81,12 +81,12 @@ mixin placeholder(number, material, column, row)
     +element(46, 'Pd', 'Palladium', 106.42, [2,8,18,18], 'transition-metal', 10, 5)
     +element(47, 'Ag', 'Silver', 107.87, [2,8,18,18,1], 'transition-metal', 11, 5)
     +element(48, 'Cd', 'Cadmium', 112.41, [2,8,18,18,2], 'transition-metal', 12, 5)
-    +element(49, 'In', 'Indium', 114.82, [2,8,18,18,3], 'Otro-Metal', 13, 5)
-    +element(50, 'Sn', 'Tin', 204.38, [2,8,18,18,4], 'Otro-Metal', 14, 5)
+    +element(49, 'In', 'Indium', 114.82, [2,8,18,18,3], 'otroMetal', 13, 5)
+    +element(50, 'Sn', 'Tin', 204.38, [2,8,18,18,4], 'otroMetal', 14, 5)
     +element(51, 'Sb', 'Antimony', 121.76, [2,8,18,18,5], 'Metaloide', 15, 5)
     +element(52, 'Te', 'Tellurium', 127.60, [2,8,18,18,6], 'Metaloide', 16, 5)
     +element(53, 'I', 'Iodine', 126.90, [2,8,18,18,7], 'Otro-no-Metal', 17, 5)
-    +element(54, 'Xe', 'Xenon', 131.29, [2,8,18,18,8], 'Gas-Noble', 18, 5)
+    +element(54, 'Xe', 'Xenon', 131.29, [2,8,18,18,8], 'gasNoble', 18, 5)
     +element(55, 'Cs', 'Caesium', 132.91, [2,8,18,18,8,1], 'Alcalino', 1, 6)
     +element(56, 'Ba', 'Barium', 137.33, [2,8,18,18,8,2], 'alkaline-earth-metal', 2, 6)
     +element(57, 'La', 'Lanthanum', 138.91, [2,8,18,18,9,2], 'Lantanido', 4, 9)
@@ -113,12 +113,12 @@ mixin placeholder(number, material, column, row)
     +element(78, 'Pt', 'Platinum', 195.08, [2,8,18,32,17,1], 'transition-metal', 10, 6)
     +element(79, 'Au', 'Gold', 196.97, [2,8,18,32,18,1], 'transition-metal', 11, 6)
     +element(80, 'Hg', 'Mercury', 200.59, [2,8,18,32,18,2], 'transition-metal', 12, 6)
-    +element(81, 'Tl', 'Thallium', 204.38, [2,8,18,32,18,3], 'Otro-Metal', 13, 6)
-    +element(82, 'Pb', 'Lead', 207.2, [2,8,18,32,18,4], 'Otro-Metal', 14, 6)
-    +element(83, 'Bi', 'Bismuth', 208.98, [2,8,18,32,18,5], 'Otro-Metal', 15, 6)
-    +element(84, 'Po', 'Polonium', '(209)', [2,8,18,32,18,6], 'Otro-Metal', 16, 6)
+    +element(81, 'Tl', 'Thallium', 204.38, [2,8,18,32,18,3], 'otroMetal', 13, 6)
+    +element(82, 'Pb', 'Lead', 207.2, [2,8,18,32,18,4], 'otroMetal', 14, 6)
+    +element(83, 'Bi', 'Bismuth', 208.98, [2,8,18,32,18,5], 'otroMetal', 15, 6)
+    +element(84, 'Po', 'Polonium', '(209)', [2,8,18,32,18,6], 'otroMetal', 16, 6)
     +element(85, 'At', 'Astatine', '(210)', [2,8,18,32,18,7], 'Metaloide', 17, 6)
-    +element(86, 'Rn', 'Radon', '(222)', [2,8,18,32,18,8], 'Gas-Noble', 18, 6)
+    +element(86, 'Rn', 'Radon', '(222)', [2,8,18,32,18,8], 'gasNoble', 18, 6)
     +element(87, 'Fr', 'Francium', '(223)', [2,8,18,32,18,8,1], 'Alcalino', 1, 7)
     +element(88, 'Ra', 'Radium', '(226)', [2,8,18,32,18,8,2], 'alkaline-earth-metal', 2, 7)
     +element(89, 'Ac', 'Actinium', '(227)', [2,8,18,32,18,9,2], 'Actinido', 4, 10)
@@ -146,7 +146,7 @@ mixin placeholder(number, material, column, row)
     +element(111, 'Rg', 'Roentgenium', '(282)', [2,8,18,32,32,17,2], 'Halogeno', 11, 7)
     +element(112, 'Cn', 'Copernicium', '(282)', [2,8,18,32,32,18,2], 'transition-metal', 12, 7)
     +element(113, 'Nh', 'Nihonium', '(286)', [2,8,18,32,32,18,3], 'Halogeno', 13, 7)
-    +element(114, 'Fl', 'Flerovium', '(289)', [2,8,18,32,32,18,4], 'Otro-Metal', 14, 7)
+    +element(114, 'Fl', 'Flerovium', '(289)', [2,8,18,32,32,18,4], 'otroMetal', 14, 7)
     +element(115, 'Mc', 'Moscovium', '(290)', [2,8,18,32,32,18,5], 'Halogeno', 15, 7)
     +element(116, 'Lv', 'Livermorium', '(293)', [2,8,18,32,32,18,6], 'Halogeno', 16, 7)
     +element(117, 'Ts', 'Tennessine', '(294)', [2,8,18,32,32,18,7], 'Halogeno', 17, 7)
@@ -164,8 +164,8 @@ mixin placeholder(number, material, column, row)
         label.Lantanoide(for='Lantanoides') Lantanoides
         label.Actinido(for='Actinidos') Actinidos
         label.transition-metal(for='transition-metals') Transition Metals
-        label.Otro-Metal(for='Otros-Metales') Otros Metales
+        label.otroMetal(for='Otros-Metales') Otros Metales
         label.Metaloide(for='Metaloides') Metaloides
         label.Otro-no-Metal(for='Otros-no-Metales') Otros No Metales
-        label.Gas-Noble(for='Gases-Nobles') Gases Nobles
+        label.gasNoble(for='Gases-Nobles') Gases Nobles
         label.Halogeno(for='Halogenos') Halogenos
