--- a/src/style.sass
+++ b/src/style.sass
@@ -6,10 +6,10 @@ $alkalineEarthMetalColor: #dee955
 $LantanidoColor: #ec77a3
 $ActinidoColor: #c686cc
 $transitionMetalColor: #fd8572
-$OtroMetalColor: #4cddf3
+$otroMetalColor: #4cddf3
 $MetaloideColor: #3aefb6
 $otroNoMetal: #52ee61
-$GasNobleColor: #759fff
+$gasNobleColor: #759fff
 $HalogenoColor: #ce1515
 
 body
@@ -288,8 +288,8 @@ body
 .transition-metal
   color: $transitionMetalColor
 
-.Otro-Metal
-  color: $OtroMetalColor
+.otroMetal
+  color: $otroMetalColor
 
 .Metaloide
   color: $MetaloideColor
@@ -297,8 +297,8 @@ body
 .Otro-no-Metal
   color: $otroNoMetal
 
-.Gas-Noble
-  color: $GasNobleColor
+.gasNoble
+  color: $gasNobleColor
 
 .Halogeno
   color: $HalogenoColor
@@ -409,10 +409,10 @@ body
 #Lantánidos:checked ~ .periodic-table .elemento:not(.Lantanido),
 #Actinidos:checked ~ .periodic-table .elemento:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .elemento:not(.transition-metal),
-#Otros-Metales:checked ~ .periodic-table .elemento:not(.Otro-Metal),
+#Otros-Metales:checked ~ .periodic-table .elemento:not(.otroMetal),
 #Metaloides:checked ~ .periodic-table .elemento:not(.Metaloide),
 #Otros-no-Metales:checked ~ .periodic-table .elemento:not(.Otro-no-Metal),
-#Gases-nobles:checked ~ .periodic-table .elemento:not(.Gas-Noble),
+#Gases-nobles:checked ~ .periodic-table .elemento:not(.gasNoble),
 #Halogenos:checked ~ .periodic-table .elemento:not(.Halogeno),
 #Alcalinos:checked ~ .periodic-table .placeholder,
 #Alcalino-Terreos:checked ~ .periodic-table .placeholder,
@@ -433,10 +433,10 @@ body
 #Lantánidos:checked ~ .periodic-table .key label:not(.Lantanido),
 #Actinidos:checked ~ .periodic-table .key label:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .key label:not(.transition-metal),
-#Otros-Metales:checked ~ .periodic-table .key label:not(.Otro-Metal),
+#Otros-Metales:checked ~ .periodic-table .key label:not(.otroMetal),
 #Metaloides:checked ~ .periodic-table .key label:not(.Metaloide),
 #Otros-no-Metales:checked ~ .periodic-table .key label:not(.Otro-no-Metal),
-#Gases-nobles:checked ~ .periodic-table .key label:not(.Gas-Noble),
+#Gases-nobles:checked ~ .periodic-table .key label:not(.gasNoble),
 #Halogenos:checked ~ .periodic-table .key label:not(.Halogeno) {
   opacity: 0.65;
 }
