--- a/src/style.sass
+++ b/src/style.sass
@@ -6,7 +6,7 @@ $alkalineEarthMetalColor: #dee955
 $LantanidoColor: #ec77a3
 $ActinidoColor: #c686cc
 $transitionMetalColor: #fd8572
-$otroMetalColor: #4cddf3
+$otroMetalColor: #135f6b
 $MetaloideColor: #3aefb6
 $otroNoMetal: #52ee61
 $gasNobleColor: #759fff
