--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   font-size: 0.5vw;
   padding-bottom: 100%;
   cursor: pointer;
- 
+  color: #fff;
   transition: 500ms;
 }
 .element .overlay {
@@ -1888,7 +1888,7 @@ body {
   color: #759fff;
 }
 
-.element .halogen {
+.halogen {
   color: #da1b1b;
 }
 
@@ -2106,7 +2106,7 @@ body {
 #metalloids:checked ~ .periodic-table .element:not(.metalloid),
 #other-nonmetals:checked ~ .periodic-table .element:not(.other-nonmetal),
 #noble-gasses:checked ~ .periodic-table .element:not(.noble-gas),
-#unknown:checked ~ .periodic-table .element:not(.unknown),
+#halogens:checked ~ .periodic-table .element:not(.halogen),
 #alkali-metals:checked ~ .periodic-table .placeholder,
 #alkaline-earth-metals:checked ~ .periodic-table .placeholder,
 #lanthanoids:checked ~ .periodic-table .placeholder:not(.lanthanoid),
@@ -2116,7 +2116,7 @@ body {
 #metalloids:checked ~ .periodic-table .placeholder,
 #other-nonmetals:checked ~ .periodic-table .placeholder,
 #noble-gasses:checked ~ .periodic-table .placeholder,
-#unknown:checked ~ .periodic-table .placeholder {
+#halogens:checked ~ .periodic-table .placeholder {
   opacity: 0.15;
   pointer-events: none;
 }
@@ -2130,7 +2130,7 @@ body {
 #metalloids:checked ~ .periodic-table .key label:not(.metalloid),
 #other-nonmetals:checked ~ .periodic-table .key label:not(.other-nonmetal),
 #noble-gasses:checked ~ .periodic-table .key label:not(.noble-gas),
-#unknown:checked ~ .periodic-table .key label:not(.unknown) {
+#halogens:checked ~ .periodic-table .key label:not(.halogen) {
   opacity: 0.65;
 }
 
